# beda-backend

./: .pre-commit-config.yaml  Dockerfile  README.md  aerich.ini  pyproject.toml
app/: config.py  main.py
app/database/: __init__.py  models.py
app/routes/: __init__.py
app/routes/auth/: __init__.py  models.py  utils.py
app/routes/weight/: __init__.py  models.py
tests/: conftest.py  test_auth.py  test_weight.py  utils.py
