[tool.poetry]
name = "beda-backend"
version = "0.1.0"
description = ""
authors = ["Beda Team <beda@danwin1210.me>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"
pre-commit = "^2.9.3"
reorder-python-imports = "^2.3.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
